--- a/DC_Blog/style.css
+++ b/DC_Blog/style.css
@@ -6,7 +6,7 @@ header {
 }
 
 header > * {
-    display: inline-block;
+    display: inline;
 }
 
 ul.menu {
@@ -19,6 +19,6 @@ ul.menu {
     display: inline;
 }
 
-.h { align-content: center;
+#h { align-content: center;
 
 }
